# openshift-ci-trigger

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  OWNERS  README.md  docker-compose-example.yaml  example.config.yaml  operators-latest-iib.json  pyproject.toml
app/: app.py  iib_update.py  utils.py
