[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "openshift-ci-trigger"
version = "1.0.0"
description = "Trigger openshift CI job based on merged MR in Gitlab"
authors = ["Meni Yakove <myakove@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.31"
slack-sdk = "^3.21.3"
flask = "^3.0.0"
python-gitlab = "^4.0.0"
pyyaml = "^6.0"
pygithub = "^2.0.0"
api4jenkins = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
